[metadata]
name = edgetest
version = attr: edgetest.__version__
description = Bleeding edge dependency testing
long_description = file: README.md, MAINTAINERS
long_description_content_type = text/markdown
author = Akshay Gupta
author_email = akshay.gupta2@capitalone.com
license = Apache Software License
maintainer = Akshay Gupta
maintainer_email = akshay.gupta2@capitalone.com
url = https://github.com/capitalone/edgetest
python_requires =
	>=3.7.0
project_urls =
	Documentation = https://capitalone.github.io/edgetest/
	Bug Tracker = https://github.com/capitalone/edgetest/issues
	Source Code = https://github.com/capitalone/edgetest
classifiers =
	Intended Audience :: Developers
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
	Cerberus<=1.3.4,>=1.3.0
	click<=8.1.3,>=7.0
	pluggy<=1.0.0,>=1.0.0
	tabulate<=0.9.0,>=0.8.9
	packaging<=23.0,>20.6
	tomlkit<=0.11.4,>=0.11.4

[options.extras_require]
docs =
	furo
	sphinx
	sphinx-copybutton
	sphinx-tabs
	pillow
	recommonmark
tests =
	coverage
	flake8
	mypy
	pydocstyle
	pytest
	pytest-cov
qa =
	pylint
	pip-tools
	pre-commit
	black
	isort
	types-click
	types-pkg_resources
	types-tabulate
build =
	build
	twine
	wheel
	bumpver
dev =
	coverage
	flake8
	mypy
	pydocstyle
	pytest
	pytest-cov
	furo
	sphinx
	sphinx-copybutton
	sphinx-tabs
	pillow
	recommonmark
	pylint
	pip-tools
	pre-commit
	black
	isort
	types-click
	types-pkg_resources
	types-tabulate
	build
	twine
	wheel
	bumpver

[options.entry_points]
console_scripts =
	edgetest = edgetest.interface:cli

[bumpver]
current_version = "2023.6.0"
version_pattern = "YYYY.MM.INC0"
commit_message = "Bump {old_version} to {new_version}"
commit = True

[bumpver:file_patterns]
docs/source/conf.py =
	version = "{version}"
setup.cfg =
	current_version = "{version}"
edgetest/__init__.py =
	__version__ = "{version}"

[aliases]
lint = pylint

[bdist_wheel]
python-tag = py3

[flake8]
max-line-length = 100
exclude = tests/*
max-complexity = 17
ignore = E203, W503

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88

[mypy]
python_version = 3.9
warn_return_any = True
warn_unused_configs = True
ignore_missing_imports = True
allow_redefinition = True
disable_error_code = empty-body

[pylint]
pylint_minimum_score = 9.5

[tool:pytest]
markers =
	unit: mark unit tests that do not require external interfaces and use mocking
	integration: mark test that interact with an external system
addopts = --verbose

[edgetest.envs.core]
python_version = 3.9
upgrade =
	Cerberus
	click
	pluggy
	tabulate
	packaging
extras =
	tests
deps =
	pip-tools
